--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://sagerblog.github.com
 title: SagerXiao's Blog
-subtitle: A blogging framework for hackers.
+subtitle: Restart of a old programmer
 author: Sager Xiao 
 simple_search: http://google.com/search
 description:
@@ -58,7 +58,7 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.ht
 # ----------------------- #
 
 # Github repositories
-github_user: 
+github_user: sagerxiao
 github_repo_count: 2 
 github_show_profile_link: true
 github_skip_forks: true
