--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://sagerblog.github.com
 title: SagerXiao's Blog
-subtitle: Restart of a old programmer
+subtitle: Restart of an old programmer
 author: Sager Xiao 
 simple_search: http://google.com/search
 description:
